# SWCTetMesher

./: CMakeLists.txt  LICENSE.md  README.md
example/: purkinje.swc
src/: SWCMesher.cpp  SWCTetMesher.cpp  swc_morph.cpp  swc_morph.h  utility.h
